--- a/vastChallenge.html
+++ b/vastChallenge.html
@@ -102,10 +102,10 @@ Comments on Scale
    information, suggest that it would not. Additional comments are below.
 			</p>
 
-Review Criteria 3: Effectiveness of the design (25%)
+Review Criteria 3: Effectiveness of the design (25%)<br>
 
    You are able to differentiate between events which require normal maintenance and events which are critical threats.
-   You are able to differentiate between events that represent physical and infrastructure failures, malicious activity against the network, or other aberrant behavior or activity.
+   You are able to differentiate between events that represent physical and infrastructure failures, malicious activity against the network, or other aberrant behavior or activity.<br><br>
 
 Overall Effectiveness Score
 <p class="indent">
@@ -129,7 +129,7 @@ Overall Submission
 
 Comments on Overall Submission
 <p class="indent">
-   Comments on guiding metaphor:
+   Comments on guiding metaphor:<br>
    This design appears appropriate to serve the purpose of an interface for
    an analyst's drilldown workspace to organize their work on particuar
    segments once assigned tasks. But the dashboard paradigm of this sort
@@ -137,7 +137,7 @@ Comments on Overall Submission
    entire network in a compelling way that abstracts away underlying details
    and gives an immediate sense for its overall state of health. This does
    not appear to be visual design which would be appropriate for a large
-   display.
+   display.<br><br>
 
    The design caters to the strengths of a particular software library,
    which, while undoubtedly strong, may not necessarily serve the needs of a
@@ -147,36 +147,36 @@ Comments on Overall Submission
    text-centric display is appropriate for smaller networks and drill-down
    work, but this doesn't address the issues described in the challenge. The
    project description describes the challenges the groups faced, but in the
-   design presented, these issues remain unresolved.
+   design presented, these issues remain unresolved.<br><br>
 
 
-   Issues:
+   Issues:<br>
    "The heatmaps can accommodate very large amounts of regions, zones, and
    alerts as the network grows over time." Do the numbers 1 to 50 stand for
    individual machines? If so, this doesn't speak to the scale of the
    problem described in the challenge. If they are representing individual
    machines, this still doesn't speak to connections among them, or other
-   issues relevant to analyzing a network as a whole.
+   issues relevant to analyzing a network as a whole.<br><br>
 
    The described struggle to include cities beyond the U.S. highlights
    scaling issue that this design faces, and the fact that the scope of
    problem this design targets is not at the scale of that described in the
-   challenge description.
+   challenge description.<br><br>
 
    Geographic information doesn't have a representation other than the list
    of cities. Connectivity appears to have been considered, but didn't make
    it into the final design. This would all be information that an analyst
-   would want, that doesn't receive representation in the design.
+   would want, that doesn't receive representation in the design.<br><br>
 
 
-   General Comments:
+   General Comments:<br>
    Time series is the guiding motif in terms of graphical display, and it
    appeared in the development that a timeline was emerging as a guiding
    idea. A timeline is certainly useful, but it's not so clear from the
    description how it would work. The one shown has a few dots on it, but
    it's not clear how they relate to the rest of the display. Age of issues
    is an important piece of information, but it's not clear how this guides
-   analysis.
+   analysis.<br><br>
 
    The display doesn't suggest in any clear way what to look for, where to
    look, or how to interpret at a glance what is the overall health of the
@@ -187,17 +187,6 @@ Comments on Overall Submission
    concerns of the design challenge.
 </p>
 		</div>	
-			
-		<p class="heading1">Leadership Role</p>
-		<ol>
-			<li>Provide leadership in the development and integration of technology into all aspects of social systems, through depth of understanding of its origin, inner workings, and the role it is meant to serve.
-
-			<li>Provide guidance in improving understanding and developing proper usage of technology, such that it may serve its proper role as a tool which allows diversity to flourish, and fosters improved living standards in the face of changing environmental conditions.
-
-			<li>Provide examples of usage which demonstrate the capabilities of current technologies, push the limits of what is currently possible, and provide direction for future developments.
-
-			<li>Provide legitimacy to partner efforts by bringing the stability of cultural traditions to bear on efforts which claim innovation as their goal, and to enforce the standards of behavior of trusted and respected institutions to provide discipline and a system of constraints. To uphold the dual standard of correctness of equivalence to the world, as judged by perception, and logical consistency as judged by trained mathematical argumentation. To hold to full scrutiny those who claim these goals as their aim, and to provide measurements, standards of correctness, and illustrations of arguments, such that the step of validation and judgement of correctness may be open to all.
-		</ol>
              
                
         </div>
