--- a/methaneTetrahedrons.html
+++ b/methaneTetrahedrons.html
@@ -66,7 +66,7 @@ text-decoration: underline;
 </head>
 <body>
         <div id="main">
-                <div style="text-align:center;font-weight:bold;font-size:12pt;color:#FFFFFF;padding-bottom:1.4em">Email to Elaine about Tetrahedrons</div>                
+                <div style="text-align:center;font-weight:bold;font-size:12pt;color:#FFFFFF;padding-bottom:1.4em">Tetrahedrons and Methane</div>                
                 <div style="text-align:center;font-size:9pt;padding-bottom:4em">DAVID SARMA</div>
      
 		<div>
