--- a/methaneTetrahedrons.html
+++ b/methaneTetrahedrons.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Email</title>
+<title>Tetrahedrons and Methane</title>
         <script type="text/x-mathjax-config">
           MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});
         </script>
