--- a/machineLearningComment.html
+++ b/machineLearningComment.html
@@ -76,7 +76,7 @@ to:	Peter Norvig<br>
 date:	Fri, Jul 5, 2013 at 6:17 PM<br>
 subject:	NYC Machine Learning Talk<br><br>
 
-Hello Dr. Norvig,<br>
+Hello Dr. Norvig,<br><br>
 I enjoyed your talk at the NYC Machine Learning Meetup.<br><br>
 
 I wanted to comment on two points: I have been taking the Udacity courses and benefiting from them. I've also faced the issue of stalling progress after starting the course and trying to stay motivated. The image that you presented of the motivation for the style of instruction on Udacity suggested to me a possible direction for addressing this issue. It helps in learning to have an older sibling and watch them struggle with the same problems that you will face. It seems like having an option to watch someone else take the class, get things wrong, and then figure out what to do, would add the story-telling type of guidance that might keep people interested and motivated.<br><br>
