--- a/index.html
+++ b/index.html
@@ -77,14 +77,38 @@
 <div id="content" width="100%">    
 
 <div>
-	<a href="http://ds604.github.io/website/shadowRectangles.html"><div class="image"><img src="https://dl.dropboxusercontent.com/u/7632896/20140216_00.png" width="30%" style="float:left"/> </div></a>
-	<a href="http://ds604.github.io/website/sineDivide.html"><div class="image"><img src="https://dl.dropboxusercontent.com/u/7632896/20140216_01.png" width="30%" style="float:left"/> </div></a>
-	<a href="http://ds604.github.io/website/metallicMeans.html"><div class="image"><img src="https://dl.dropboxusercontent.com/u/7632896/20140130_00.png" width="30%" style="float:left"/> </div></a>
-	<a href="http://ds604.github.io/website/sketchyCircle.html"><div class="image"><img src="https://dl.dropboxusercontent.com/u/7632896/20140129_00.png" width="30%" style="float:left"/> </div></a>
-	  <a href="http://ds604.github.io/website/rotatingCircle.html"><div class="image"><img src="https://dl.dropboxusercontent.com/u/7632896/20140122_00.png" width="30%" style="float:left"/> </div></a>
-    <a href="http://ds604.github.io/website/waveSine01.html"><div class="image"><img src="https://dl.dropboxusercontent.com/u/7632896/20140120_00.png" width="30%" style="float:left"/></div></a>
-    <a href="http://integral.davidsarma.org/mountain/"><div class="image"><img src="https://dl.dropboxusercontent.com/u/7632896/20140102_00.png" width="30%" style="float:left"/></div></a>
-        <a href="http://ds604.github.io/website/integralDS.html"><div class="image"><img src="https://dl.dropboxusercontent.com/u/7632896/integralDS.jpg" width="30%" style="float:left"/>  </div></a>
+	<a href="http://ds604.github.io/website/shadowRectangles.html"><div class="image">
+<!-- 		<img src="https://dl.dropboxusercontent.com/u/7632896/20140216_00.png" width="30%" style="float:left"/>  -->
+		<img src="https://ds604.neocities.org/Public/20140216_00.png" />
+		</div></a>
+	<a href="http://ds604.github.io/website/sineDivide.html"><div class="image">
+<!-- 		<img src="https://dl.dropboxusercontent.com/u/7632896/20140216_01.png" width="30%" style="float:left"/>  -->
+		<img src="https://ds604.neocities.org/Public/20140216_01.png" />
+		</div></a>
+	<a href="http://ds604.github.io/website/metallicMeans.html"><div class="image">
+<!-- 		<img src="https://dl.dropboxusercontent.com/u/7632896/20140130_00.png" width="30%" style="float:left"/>  -->
+		<img src="https://ds604.neocities.org/Public/20140130_00.png" />
+		</div></a>
+	<a href="http://ds604.github.io/website/sketchyCircle.html"><div class="image">
+<!-- 		<img src="https://dl.dropboxusercontent.com/u/7632896/20140129_00.png" width="30%" style="float:left"/>  -->
+		<img src="https://ds604.neocities.org/Public/20140129_00.png" />
+		</div></a>
+	<a href="http://ds604.github.io/website/rotatingCircle.html"><div class="image">
+<!-- 		<img src="https://dl.dropboxusercontent.com/u/7632896/20140122_00.png" width="30%" style="float:left"/>  -->
+		<img src="https://ds604.neocities.org/Public/20140122_00.png" />
+		</div></a>
+    	<a href="http://ds604.github.io/website/waveSine01.html"><div class="image">
+<!-- 		<img src="https://dl.dropboxusercontent.com/u/7632896/20140120_00.png" width="30%" style="float:left"/> -->
+		<img src="https://ds604.neocities.org/Public/20140120_00.png" />
+		</div></a>
+    	<a href="http://integral.davidsarma.org/mountain/"><div class="image">
+<!-- 		<img src="https://dl.dropboxusercontent.com/u/7632896/20140102_00.png" width="30%" style="float:left"/> -->
+		<img src="https://ds604.neocities.org/Public/20140102_00.png" />
+		</div></a>
+        <a href="http://ds604.github.io/website/integralDS.html"><div class="image">
+<!-- 		<img src="https://dl.dropboxusercontent.com/u/7632896/integralDS.jpg" width="30%" style="float:left"/>   -->
+		<img src="https://ds604.neocities.org/Public/integralDS.jpg" />
+		</div></a>
 	</div>
 
 </div>
