--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 <!-- 		<img src="https://dl.dropboxusercontent.com/u/7632896/20140120_00.png" width="30%" style="float:left"/> -->
 		<img src="https://ds604.neocities.org/Public/20140120_00.png" />
 		</div></a>
-    	<a href="http://integral.davidsarma.org/mountain/"><div class="image">
+    	<a href="http://ds604.github.io/website/fractalLine.html"><div class="image">
 <!-- 		<img src="https://dl.dropboxusercontent.com/u/7632896/20140102_00.png" width="30%" style="float:left"/> -->
 		<img src="https://ds604.neocities.org/Public/20140102_00.png" />
 		</div></a>
